{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 190,
  "lineage": "b15f3b55-7a06-4956-b230-15d4c5a240c2",
  "resources": [
    {
      "module": "module.App_private_route_table_subnet_association[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnet1RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aafce2e23b972d3",
            "route_table_id": "rtb-0ccdb8d4809e0b4e0",
            "subnet_id": "subnet-0751f05ae19e76fd0"
          },
          "dependencies": [
            "module.app_private_route_table.aws_route_table.RouteTable",
            "module.app_private_subnet.aws_subnet.Subnet",
            "module.nat_gateway.aws_eip.eip",
            "module.nat_gateway.aws_nat_gateway.NatGateway",
            "module.public_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.App_private_route_table_subnet_association[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnet1RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec4b10900024789e",
            "route_table_id": "rtb-081d168a7e15d07fb",
            "subnet_id": "subnet-0cdc2f3404124a034"
          },
          "dependencies": [
            "module.app_private_route_table.aws_route_table.RouteTable",
            "module.app_private_subnet.aws_subnet.Subnet",
            "module.nat_gateway.aws_eip.eip",
            "module.nat_gateway.aws_nat_gateway.NatGateway",
            "module.public_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Db_private_route_table_subnet_association[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnet1RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b350c40e1ce7209",
            "route_table_id": "rtb-0df48a4de5c9f3507",
            "subnet_id": "subnet-04e07788c8a30fb02"
          },
          "dependencies": [
            "module.db_private_route_table.aws_route_table.RouteTable",
            "module.db_private_subnet.aws_subnet.Subnet",
            "module.nat_gateway.aws_eip.eip",
            "module.nat_gateway.aws_nat_gateway.NatGateway",
            "module.public_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Db_private_route_table_subnet_association[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnet1RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f9c52b63487f094",
            "route_table_id": "rtb-08a921c910c4de650",
            "subnet_id": "subnet-0c5fe246db3f3ca30"
          },
          "dependencies": [
            "module.db_private_route_table.aws_route_table.RouteTable",
            "module.db_private_subnet.aws_subnet.Subnet",
            "module.nat_gateway.aws_eip.eip",
            "module.nat_gateway.aws_nat_gateway.NatGateway",
            "module.public_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_private_route_table[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:route-table/rtb-0ccdb8d4809e0b4e0",
            "id": "rtb-0ccdb8d4809e0b4e0",
            "owner_id": "562807253693",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07828124ef06419fe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AppPrivateRouteTable1"
            },
            "tags_all": {
              "Name": "AppPrivateRouteTable1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.eip",
            "module.nat_gateway.aws_nat_gateway.NatGateway",
            "module.public_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_private_route_table[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:route-table/rtb-081d168a7e15d07fb",
            "id": "rtb-081d168a7e15d07fb",
            "owner_id": "562807253693",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d94d10494db4340f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AppPrivateRouteTable2"
            },
            "tags_all": {
              "Name": "AppPrivateRouteTable2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.eip",
            "module.nat_gateway.aws_nat_gateway.NatGateway",
            "module.public_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_private_subnet[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:subnet/subnet-0751f05ae19e76fd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0751f05ae19e76fd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562807253693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AppPrivateSubnet1"
            },
            "tags_all": {
              "Name": "AppPrivateSubnet1"
            },
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_private_subnet[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:subnet/subnet-0cdc2f3404124a034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdc2f3404124a034",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562807253693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AppPrivateSubnet2"
            },
            "tags_all": {
              "Name": "AppPrivateSubnet2"
            },
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_private_subnets_nacl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_subnets_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:network-acl/acl-001680648a0195305",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-001680648a0195305",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "562807253693",
            "subnet_ids": [
              "subnet-0751f05ae19e76fd0",
              "subnet-0cdc2f3404124a034"
            ],
            "tags": {
              "Name": "AppPrivateSubnetNACL"
            },
            "tags_all": {
              "Name": "AppPrivateSubnetNACL"
            },
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_private_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_private_route_table[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:route-table/rtb-0df48a4de5c9f3507",
            "id": "rtb-0df48a4de5c9f3507",
            "owner_id": "562807253693",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07828124ef06419fe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DbPrivateRouteTable1"
            },
            "tags_all": {
              "Name": "DbPrivateRouteTable1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.eip",
            "module.nat_gateway.aws_nat_gateway.NatGateway",
            "module.public_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_private_route_table[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:route-table/rtb-08a921c910c4de650",
            "id": "rtb-08a921c910c4de650",
            "owner_id": "562807253693",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d94d10494db4340f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DbPrivateRouteTable2"
            },
            "tags_all": {
              "Name": "DbPrivateRouteTable2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.eip",
            "module.nat_gateway.aws_nat_gateway.NatGateway",
            "module.public_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_private_subnet[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:subnet/subnet-04e07788c8a30fb02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e07788c8a30fb02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562807253693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DbPrivateSubnet1"
            },
            "tags_all": {
              "Name": "DbPrivateSubnet1"
            },
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_private_subnet[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:subnet/subnet-0c5fe246db3f3ca30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5fe246db3f3ca30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562807253693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DbPrivateSubnet2"
            },
            "tags_all": {
              "Name": "DbPrivateSubnet2"
            },
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_private_subnets_nacl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_subnets_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:network-acl/acl-0c65b9be258504a71",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 3306
              }
            ],
            "id": "acl-0c65b9be258504a71",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 3306
              }
            ],
            "owner_id": "562807253693",
            "subnet_ids": [
              "subnet-04e07788c8a30fb02",
              "subnet-0c5fe246db3f3ca30"
            ],
            "tags": {
              "Name": "DbPrivateSubnetNACL"
            },
            "tags_all": {
              "Name": "DbPrivateSubnetNACL"
            },
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db_private_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:internet-gateway/igw-0a8cfd6a33c093e5e",
            "id": "igw-0a8cfd6a33c093e5e",
            "owner_id": "562807253693",
            "tags": {
              "Name": "Internetgateway"
            },
            "tags_all": {
              "Name": "Internetgateway"
            },
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065fef347799d11ea",
            "domain": "vpc",
            "id": "eipalloc-065fef347799d11ea",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-210-253-159.compute-1.amazonaws.com",
            "public_ip": "18.210.253.159",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065fef347799d11ea",
            "connectivity_type": "public",
            "id": "nat-07828124ef06419fe",
            "network_interface_id": "eni-03eaabe7be3402660",
            "private_ip": "10.0.0.124",
            "public_ip": "18.210.253.159",
            "subnet_id": "subnet-0d9de9843961b35f8",
            "tags": {
              "Name": "NatGateway1"
            },
            "tags_all": {
              "Name": "NatGateway1"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip",
            "module.public_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ab8954c573bfcc6",
            "domain": "vpc",
            "id": "eipalloc-07ab8954c573bfcc6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-201-79-25.compute-1.amazonaws.com",
            "public_ip": "52.201.79.25",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway[1]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ab8954c573bfcc6",
            "connectivity_type": "public",
            "id": "nat-0d94d10494db4340f",
            "network_interface_id": "eni-0cc69ad0461629cd1",
            "private_ip": "10.0.1.169",
            "public_ip": "52.201.79.25",
            "subnet_id": "subnet-0abdd6550447ee6f3",
            "tags": {
              "Name": "NatGateway2"
            },
            "tags_all": {
              "Name": "NatGateway2"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip",
            "module.public_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:route-table/rtb-078f024c834c3e9f9",
            "id": "rtb-078f024c834c3e9f9",
            "owner_id": "562807253693",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8cfd6a33c093e5e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.ig",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table_subnet_association[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnet1RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9838cc19b0c46bb",
            "route_table_id": "rtb-078f024c834c3e9f9",
            "subnet_id": "subnet-0d9de9843961b35f8"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.ig",
            "module.public_route_table.aws_route_table.RouteTable",
            "module.public_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table_subnet_association[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnet1RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cbd6ac0ad24a930",
            "route_table_id": "rtb-078f024c834c3e9f9",
            "subnet_id": "subnet-0abdd6550447ee6f3"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.ig",
            "module.public_route_table.aws_route_table.RouteTable",
            "module.public_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:subnet/subnet-0d9de9843961b35f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9de9843961b35f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "562807253693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1"
            },
            "tags_all": {
              "Name": "PublicSubnet1"
            },
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:subnet/subnet-0abdd6550447ee6f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abdd6550447ee6f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "562807253693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet2"
            },
            "tags_all": {
              "Name": "PublicSubnet2"
            },
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets_nacl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_subnets_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:network-acl/acl-0259a6bb370b9f710",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0259a6bb370b9f710",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "562807253693",
            "subnet_ids": [
              "subnet-0abdd6550447ee6f3",
              "subnet-0d9de9843961b35f8"
            ],
            "tags": {
              "Name": "PublicSubnetNACL"
            },
            "tags_all": {
              "Name": "PublicSubnetNACL"
            },
            "vpc_id": "vpc-06e533d0cfc7478ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnet.aws_subnet.Subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562807253693:vpc/vpc-06e533d0cfc7478ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cdb1e80b551dac18",
            "default_route_table_id": "rtb-06cbf5dbbcb541a39",
            "default_security_group_id": "sg-073e9b5c0a188b13f",
            "dhcp_options_id": "dopt-0c0599adbe035c924",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06e533d0cfc7478ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06cbf5dbbcb541a39",
            "owner_id": "562807253693",
            "tags": {
              "Name": "myvpc"
            },
            "tags_all": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}